Fix spacing in side navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -211,11 +211,11 @@ header {
 }
 
 .spacing {
-       padding-right: 98px;
+       padding-right: 80px;
 }
 
 .collectives-span {
-	margin: auto 26px;
+	margin: auto 17px;
 }
 
 .overflow-ai-small {
